--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -286,16 +286,22 @@ jobs:
       - name: Cleanup
         run: rm -f cosign.key
 
-
   verify_image:
     runs-on: ubuntu-latest
     needs: sign_image
 
     steps:
-      - name: Verify Signed Docker Image
+      - name: Install Cosign
+        run: |
+          curl -L https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64 -o cosign
+          chmod +x cosign
+          sudo mv cosign /usr/local/bin/
+
+      - name: Verify Signed Docker Image using Digest
         run: |
           echo "${{ secrets.COSIGN_PUBLIC_KEY }}" > cosign.pub
-          cosign verify --key cosign.pub sidwar/devsecops-demo:${{ github.sha }}
+          cosign verify --key cosign.pub $IMAGE_DIGEST
         env:
           COSIGN_PUBLIC_KEY: ${{ secrets.COSIGN_PUBLIC_KEY }}
+          IMAGE_DIGEST: ${{ needs.sign_image.outputs.IMAGE_DIGEST }}
 
