--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -116,6 +116,7 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)/app
           pytest app/test.py --cov=app --cov-report=xml:coverage.xml --maxfail=1 -v
+
       - name: Install Docker (latest version)
         run: |
           sudo apt-get update
@@ -254,6 +255,8 @@ jobs:
   sign_image:
     runs-on: ubuntu-latest
     needs: optimize_image
+    outputs:
+      IMAGE_DIGEST: ${{ steps.extract_image_digest.outputs.digest }}
 
     steps:
       - name: Install Cosign
@@ -272,16 +275,17 @@ jobs:
         run: docker pull sidwar/devsecops-demo:${{ github.sha }}
 
       - name: Extract Image Digest
+        id: extract_image_digest
         run: |
           DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' sidwar/devsecops-demo:${{ github.sha }})
-          echo "IMAGE_DIGEST=$DIGEST" >> $GITHUB_ENV
-
+          echo "::set-output name=digest::$DIGEST"
+        
       - name: Sign Docker Image
         run: |
           echo "${{ secrets.COSIGN_KEY }}" > cosign.key
           cosign sign --key cosign.key --yes $IMAGE_DIGEST
         env:
-          IMAGE_DIGEST: ${{ env.IMAGE_DIGEST }}
+          IMAGE_DIGEST: ${{ steps.extract_image_digest.outputs.digest }}
 
       - name: Cleanup
         run: rm -f cosign.key
@@ -303,12 +307,9 @@ jobs:
       - name: Print COSIGN_PUBLIC_KEY
         run: echo "COSIGN_PUBLIC_KEY: ${{ secrets.COSIGN_PUBLIC_KEY }}"
 
-
       - name: Verify Signed Docker Image using Digest
         run: |
           echo "${{ secrets.COSIGN_PUBLIC_KEY }}" > cosign.pub
-          cosign verify --key cosign.pub $IMAGE_DIGEST
+          cosign verify --key cosign.pub ${{ needs.sign_image.outputs.IMAGE_DIGEST }}
         env:
           COSIGN_PUBLIC_KEY: ${{ secrets.COSIGN_PUBLIC_KEY }}
-          IMAGE_DIGEST: ${{ needs.sign_image.outputs.IMAGE_DIGEST }}
-
