--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -252,12 +252,9 @@ jobs:
       - name: Push Slimmed Docker Image
         run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
 
-  sign_image:
+  sign_and_verify_image:
     runs-on: ubuntu-latest
-    needs: optimize_image
-    outputs:
-      IMAGE_DIGEST: ${{ steps.extract_image_digest.outputs.digest }}
-
+    needs: devsecops-demo
     steps:
       - name: Install Cosign
         run: |
@@ -278,38 +275,25 @@ jobs:
         id: extract_image_digest
         run: |
           DIGEST=$(docker inspect --format='{{index .RepoDigests 0}}' sidwar/devsecops-demo:${{ github.sha }})
-          echo "digest=$DIGEST" >> $GITHUB_OUTPUT
+          echo "IMAGE_DIGEST=$DIGEST" >> $GITHUB_ENV
 
       - name: Sign Docker Image
         run: |
           echo "${{ secrets.COSIGN_KEY }}" > cosign.key
           cosign sign --key cosign.key --yes $IMAGE_DIGEST
         env:
-          IMAGE_DIGEST: ${{ steps.extract_image_digest.outputs.digest }}
+          IMAGE_DIGEST: ${{ env.IMAGE_DIGEST }}
 
-      - name: Cleanup
-        run: rm -f cosign.key
-
-  verify_image:
-    runs-on: ubuntu-latest
-    needs: sign_image
-
-    steps:
-      - name: Install Cosign
-        run: |
-          curl -L https://github.com/sigstore/cosign/releases/latest/download/cosign-linux-amd64 -o cosign
-          chmod +x cosign
-          sudo mv cosign /usr/local/bin/
-
-      - name: Print Image Digest
-        run: echo "IMAGE_DIGEST: ${{ needs.sign_image.outputs.IMAGE_DIGEST }}"
-
-      - name: Print COSIGN_PUBLIC_KEY
-        run: echo "COSIGN_PUBLIC_KEY: ${{ secrets.COSIGN_PUBLIC_KEY }}"
+      - name: Print Signed Image Digest
+        run: echo "Signed image digest: $IMAGE_DIGEST"
 
       - name: Verify Signed Docker Image using Digest
         run: |
           echo "${{ secrets.COSIGN_PUBLIC_KEY }}" > cosign.pub
-          cosign verify --key cosign.pub ${{ needs.sign_image.outputs.IMAGE_DIGEST }}
+          cosign verify --key cosign.pub $IMAGE_DIGEST
         env:
           COSIGN_PUBLIC_KEY: ${{ secrets.COSIGN_PUBLIC_KEY }}
+          IMAGE_DIGEST: ${{ env.IMAGE_DIGEST }}
+
+      - name: Cleanup
+        run: rm -f cosign.key cosign.pub
