--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -230,18 +230,18 @@ jobs:
   optimize_image:
     runs-on: ubuntu-latest
     needs: vulnerability_scan
-    continue-on-error: true
-
     steps:
       - name: Pull Docker Image
         run: docker pull sidwar/devsecops-demo:${{ github.sha }}
 
-      - name: Optimize Docker Image with Docker Slim
-        uses: docker-slim/docker-slim-action@v1
-        with:
-          target: sidwar/devsecops-demo:${{ github.sha }}
-          tag: sidwar/devsecops-demo:slim-${{ github.sha }}
-        continue-on-error: false
+      - name: Install Docker Slim
+        run: |
+          curl -sL https://downloads.dockerslim.com/releases/1.39.0/dist_linux.tar.gz | tar -xz
+          sudo mv dist_linux/docker-slim /usr/local/bin/
+
+      - name: Optimize Docker Image
+        run: |
+          docker-slim build --tag sidwar/devsecops-demo:slim-${{ github.sha }} sidwar/devsecops-demo:${{ github.sha }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -251,6 +251,7 @@ jobs:
 
       - name: Push Slimmed Docker Image
         run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
+
 
   sign_and_verify_image:
     runs-on: ubuntu-latest
