--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -237,8 +237,9 @@ jobs:
       - name: Install Docker Slim
         run: |
           curl -sL https://github.com/docker-slim/docker-slim/releases/download/1.20/dist_linux.tar.gz -o docker-slim.tar.gz
-          tar -xzf docker-slim.tar.gz
-          sudo mv dist_linux/docker-slim /usr/local/bin/
+          tar -xzf docker-slim.tar.gz || { echo "Failed to extract Docker Slim. Exiting."; exit 1; }
+          sudo mv dist_linux/docker-slim /usr/local/bin/ || { echo "Failed to move Docker Slim binary. Exiting."; exit 1; }
+          sudo chmod +x /usr/local/bin/docker-slim
           rm -rf dist_linux docker-slim.tar.gz
 
       - name: Verify Docker Slim Installation
@@ -246,7 +247,10 @@ jobs:
 
       - name: Optimize Docker Image
         run: |
-          docker-slim build --tag sidwar/devsecops-demo:slim-${{ github.sha }} sidwar/devsecops-demo:${{ github.sha }}
+          docker-slim build \
+            --verbose \
+            --tag sidwar/devsecops-demo:slim-${{ github.sha }} \
+            sidwar/devsecops-demo:${{ github.sha }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -256,6 +260,7 @@ jobs:
 
       - name: Push Slimmed Docker Image
         run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
+
 
 
   sign_and_verify_image:
