--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -242,6 +242,17 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-slim
           rm -rf dist_linux docker-slim.tar.gz
 
+      - name: Verify Installation Path
+        run: |
+          echo "Verifying installation paths..."
+          ls -l /usr/local/bin/docker-slim
+          echo "Verifying /opt/dockerslim contents (if exists)..."
+          if [ -d "/opt/dockerslim" ]; then
+            ls -l /opt/dockerslim
+          else
+            echo "/opt/dockerslim directory does not exist"
+          fi
+
       - name: Verify Docker Slim Installation
         run: docker-slim --version
 
@@ -252,6 +263,11 @@ jobs:
             --tag sidwar/devsecops-demo:slim-${{ github.sha }} \
             sidwar/devsecops-demo:${{ github.sha }}
 
+      - name: Debug Output
+        run: |
+          echo "Checking sensor location after build failure..."
+          ls -l /opt/dockerslim
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -260,7 +276,6 @@ jobs:
 
       - name: Push Slimmed Docker Image
         run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
-
 
   sign_and_verify_image:
     runs-on: ubuntu-latest
