updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -236,22 +236,25 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Pull Docker Image
         run: docker pull sidwar/devsecops-demo:${{ github.sha }}
 
-      - name: Pull Docker Slim Image
-        run: docker pull docker-slim/docker-slim:1.20
+      - name: Pull Slim Docker Image
+        run: docker pull slimtoolkit/slim:latest
 
-      - name: Optimize Docker Image using Docker Slim
+      - name: Optimize Docker Image using Slim
         run: |
-          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $(pwd):/tmp docker-slim/docker-slim:1.20 build \
-            --http-probe=false \
-            --tag sidwar/devsecops-demo:slim-${{ github.sha }} \
-            sidwar/devsecops-demo:${{ github.sha }}
-            
+          docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $(pwd):/tmp \
+            slimtoolkit/slim:latest \
+            --target sidwar/devsecops-demo:${{ github.sha }} \
+            --tag sidwar/devsecops-demo:slim-${{ github.sha }}
+
       - name: Push Slimmed Docker Image
         run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
+
 
   sign_and_verify_image:
     runs-on: ubuntu-latest
