--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -229,7 +229,7 @@ jobs:
 
   optimize_image:
     runs-on: ubuntu-latest
-    needs: vulnerability_scan
+    needs: devsecops-demo
     steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -241,14 +241,14 @@ jobs:
         run: docker pull sidwar/devsecops-demo:${{ github.sha }}
 
       - name: Pull Slim Docker Image
-        run: docker pull slimtoolkit/slim:latest
+        run: docker pull dslim/slim:latest
 
       - name: Optimize Docker Image using Slim
         run: |
           docker run --rm \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v $(pwd):/tmp \
-            slimtoolkit/slim:latest \
+            dslim/slim:latest \
             --target sidwar/devsecops-demo:${{ github.sha }} \
             --tag sidwar/devsecops-demo:slim-${{ github.sha }}
 
