--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -229,7 +229,7 @@ jobs:
 
   optimize_image:
     runs-on: ubuntu-latest
-    needs: devsecops-demo
+    needs: vulnerability_scan
     steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -249,12 +249,10 @@ jobs:
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v $(pwd):/tmp \
             dslim/slim:latest \
-            --target sidwar/devsecops-demo:${{ github.sha }} \
-            --tag sidwar/devsecops-demo:slim-${{ github.sha }}
+            build --input sidwar/devsecops-demo:${{ github.sha }} --output sidwar/devsecops-demo:slim-${{ github.sha }}
 
       - name: Push Slimmed Docker Image
         run: docker push sidwar/devsecops-demo:slim-${{ github.sha }}
-
 
   sign_and_verify_image:
     runs-on: ubuntu-latest
