--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -229,7 +229,7 @@ jobs:
 
   optimize_image:
     runs-on: ubuntu-latest
-    needs: vulnerability_scan
+    needs: devsecops-demo
     steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
