--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -79,7 +79,7 @@ jobs:
 
   validate_dockerfile:
     runs-on: ubuntu-latest
-    needs: devsecops-demo
+    needs: sonar_scan
 
     steps:
       - name: Checkout Code
@@ -144,7 +144,7 @@ jobs:
 
   optimize_image:
     runs-on: ubuntu-latest
-    needs: devsecops-demo
+    needs: validate_dockerfile
     steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
