--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -79,7 +79,7 @@ jobs:
 
   validate_dockerfile:
     runs-on: ubuntu-latest
-    needs: sonar_scan
+    needs: devsecops-demo
 
     steps:
       - name: Checkout Code
@@ -168,7 +168,7 @@ jobs:
 
   sign_and_verify_image:
     runs-on: ubuntu-latest
-    needs: devsecops-demo
+    needs: optimize_image
     steps:
       - name: Install Cosign
         run: |
