updated workflow file

--- a/.github/workflows/.gitleaks.toml
+++ b/.github/workflows/.gitleaks.toml
@@ -1,5 +1,17 @@
-[rules]
-[[rules.finding]]
-description = "API Key Detection"
-regex = "([0-9]{5}-[A-Za-z0-9]{5}-[A-Za-z0-9]+-[A-Za-z0-9]+)"
-tags = ["API_KEY"]
+[[rules]]
+description = "Potential sensitive information"
+id = "sensitive-info"
+regex = '''password|api_key|secret'''
+tags = ["high_severity"]
+
+[[rules]]
+description = "Potential access keys"
+id = "access-keys"
+regex = '''access_key|private_key'''
+tags = ["high_severity"]
+
+[[rules]]
+description = "Text file containing potential secrets"
+id = "secrets-file"
+file = '''secrets.txt'''
+tags = ["medium_severity"]
