--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -27,11 +27,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Tests
-        run: |
-          export PYTHONPATH=$PYTHONPATH:$(pwd)/app
-          pytest app/test.py --cov=app --cov-report=xml:$(pwd)/coverage.xml --maxfail=1 -v
-
       - name: Install Docker (latest version)
         run: |
           sudo apt-get update
@@ -77,21 +72,30 @@ jobs:
       - name: List directory contents
         run: ls -la
 
-      - name: Run SonarCloud analysis
+
+      - name: Run Tests and Generate Coverage
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)/app
+          pytest app/test.py --cov=app --cov-report=xml:coverage.xml --maxfail=1 -v
+
+      - name: Debug Coverage File
+        run: |
+          echo "Coverage report contents:"
+          cat coverage.xml || echo "Coverage file not found!"
+
+      - name: Run SonarCloud Analysis
         uses: sonarsource/sonarcloud-github-action@v2
         with:
           args: >
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.sources=app
-            -Dsonar.tests=app
-            -Dsonar.test.inclusions=**/test*.py
             -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.sources=app
             -X
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+          
   validate_dockerfile:
     runs-on: ubuntu-latest
     needs: devsecops-demo
