--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -72,6 +72,10 @@ jobs:
       - name: List directory contents
         run: ls -la
 
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run Tests and Generate Coverage
         run: |
@@ -95,7 +99,7 @@ jobs:
             -X
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          
+
   validate_dockerfile:
     runs-on: ubuntu-latest
     needs: devsecops-demo
