updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -123,12 +123,45 @@ jobs:
           chmod +x opa
           sudo mv opa /usr/local/bin/
 
-      - name: Validate Dockerfile
+      - name: List files for debugging
+        run: ls -la
+
+      - name: Display Dockerfile contents for debugging
+        run: cat Dockerfile
+
+      - name: Evaluate Dockerfile against policy
         run: |
-          ls -la
-          opa eval --input Dockerfile --data policy/docker.rego --format pretty \
-            "data.docker.policy.deny" > policy-evaluation.txt || true
+          # Debugging: Check if Dockerfile exists
+          if [ ! -f Dockerfile ]; then
+            echo "Dockerfile not found!"
+            exit 1
+          fi
+
+          # Debugging: Show Dockerfile contents
+          echo "Dockerfile contents:"
+          cat Dockerfile
+
+          # Ensure the 'policy' directory and rego policy file exist
+          echo "Checking if policy/docker.rego exists:"
+          ls -la policy
+
+          # Run the OPA evaluation on the Dockerfile, with verbose output for debugging
+          opa eval --input Dockerfile --data policy/docker.rego --format pretty --verbose "data.docker.policy.deny" > policy-evaluation.txt || true
+
+          # Show the evaluation results for debugging
+          echo "Policy evaluation result:"
           cat policy-evaluation.txt
+
+      - name: Check for policy violations
+        run: |
+          violations=$(cat policy-evaluation.txt)
+          if [[ "$violations" == *"deny"* ]]; then
+            echo "Policy violations found!"
+            exit 1
+          else
+            echo "No policy violations found."
+          fi
+
 
   vulnerability_scan:
     runs-on: ubuntu-latest
