updated workflow file

--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -125,28 +125,7 @@ jobs:
 
       - name: Validate Dockerfile
         run: |
-          mkdir -p policy
-          echo '
-          package docker.policy
-
-          deny[msg] {
-              input.instruction == "USER"
-              input.value == "root"
-              msg = "Avoid using root user in Dockerfile."
-          }
-
-          deny[msg] {
-              input.instruction == "ADD"
-              msg = "Use COPY instead of ADD for better security."
-          }
-
-          any_non_root_user_set {
-              input.instruction == "USER"
-              input.value != "root"
-          }
-          ' > policy/docker.rego
-
-          opa eval --input Dockerfile --data policy/ --format pretty \
+          opa eval --input Dockerfile --data policy/docker.rego --format pretty \
             "data.docker.policy.deny" > policy-evaluation.txt || true
           cat policy-evaluation.txt
 
